2017-01-03: Fixed incorrect LGPL license reference in Oasis specification.
            The software is actually distributed under the Expat-license.

2016-12-15: Added new functions for more efficient and convenient blob access:

              * column_blob
              * row_blobs

            Thanks to Nicolas Ojeda Bar <nicolas.ojeda.bar@lexifi.com>
            for this patch!

2016-10-07: Some portability improvements and Travis integration

            Thanks to Leonid Rozenberg <leonidr@gmail.com> for his Travis work!

2016-06-14: Changed default configuration setting for loadable extensions
            on Mac OS X.  Due to frequent installation issues the default
            setting is now to turn off loadable extensions on that platform.
            You will have to explicitly turn them on if you need them.

2016-05-24: Fixed a bug finalizing user-defined functions for a database.

            Thanks to Mark Bradley <barkmadley@gmail.com> for this patch!

2015-11-18: More build process improvements for Homebrew users.

            Thanks to Leonid Rozenberg <leonidr@gmail.com> for this patch!

2015-11-05: Improved build process for Homebrew users.

            Thanks to Leonid Rozenberg <leonidr@gmail.com> for this patch!

2015-09-02: Major API change that is compatible with major release series 2:

            It is now possible to return errors from user-defined SQL-functions
            by simply raising (arbitrary) exceptions.  This somewhat
            tricky internal change eliminates the need for Data.ERROR and
            reestablishes compatibility with major release series 2.

            Sorry for the churn, but the more elegant solution was not
            quite obvious!

2015-08-29: Added user function error handling (major API change).

            Thanks to Joseph Young for this patch!

2015-01-29: Fixed a build problem due to Oasis/ocamlbuild inconsistency.

            Thanks to Leonid Rozenberg <leonidr@gmail.com> for this patch!
