@@ -10,6 +10,7 @@ depexts: [
   [["rhel"] ["sqlite-devel"]]
   [["fedora"] ["sqlite-devel"]]
   [["alpine"] ["sqlite-dev"]]
+  [["opensuse"] ["sqlite3-devel"]]
   [["osx" "homebrew"] ["sqlite3"]]
   [["osx" "macports"] ["sqlite3"]]
 ]
