@@ -1,10 +1,10 @@
 opam-version: "1.2"
 name: "sqlite3"
-version: "4.0.6"
+version: "4.1.2"
 maintainer: "Markus Mottl <markus.mottl@gmail.com>"
 authors: [ "Markus Mottl <markus.mottl@gmail.com>"
            "Christian Szegedy <csdontspam@metamatix.com>" ]
-license: "LGPL-2.1+ with OCaml linking exception"
+license: "Expat"
 homepage: "http://mmottl.github.io/sqlite3-ocaml"
 dev-repo: "https://github.com/mmottl/sqlite3-ocaml.git"
 bug-reports: "https://github.com/mmottl/sqlite3-ocaml/issues"
@@ -41,6 +41,7 @@ depexts: [
   [["rhel"] ["sqlite-devel"]]
   [["fedora"] ["sqlite-devel"]]
   [["alpine"] ["sqlite-dev"]]
+  [["opensuse"] ["sqlite3-devel"]]
   [["osx" "homebrew"] ["sqlite3"]]
   [["osx" "macports"] ["sqlite3"]]
 ]
