@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: ca0a65af2ec3c9934900a490b3a6e221) *)
+(* DO NOT EDIT (digest: 7960a9c9ee49471a7f4e7abcee9794e7) *)
 (*
    Regenerated by OASIS v0.4.8
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -7157,7 +7157,7 @@ let setup_t =
        {
           oasis_version = "0.4";
           ocaml_version = Some (OASISVersion.VGreaterEqual "3.12");
-          version = "4.1.1";
+          version = "4.1.2";
           license =
             OASISLicense.DEP5License
               (OASISLicense.DEP5Unit
@@ -8529,7 +8529,7 @@ let setup_t =
      oasis_fn = Some "_oasis";
      oasis_version = "0.4.8";
      oasis_digest =
-       Some "\142\247p7{\134\171\131\149\214\239A\240\181\230\147";
+       Some "\197i\019\018\207=r\147w\133\145\165\137\162\148\138";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
